--- a/portfolio/.streamlit/config.toml
+++ b/portfolio/.streamlit/config.toml
@@ -165,11 +165,20 @@ serverAddress = "localhost"
 [theme]
 
 # The preset Streamlit theme that your custom theme inherits from. One of "light" or "dark".
-# base =
+base = "dark"
 
-primaryColor = "F36295"
-backgroundColor = "#F0FF33"
-secondaryBackgroundColor = "#3183D1"
-textColor = "#03080C"
-font = "sans-serif"
+# Primary accent color for interactive elements.
+# primaryColor =
+
+# Background color for the main content area.
+# backgroundColor = 
+
+# Background color used for the sidebar and most interactive widgets.
+# secondaryBackgroundColor =
+
+# Color used for almost all text.
+# textColor =
+
+# Font family for all text in the app, except code blocks. One of "sans serif", "serif", or "monospace".
+# font =
 
