stock data function finished

--- a/ZoomCamp/Project2/Makefile
+++ b/ZoomCamp/Project2/Makefile
@@ -1,4 +1,8 @@
-datascraper:
-	python3 data/data_collection.py
+install:
+	pip install -r data/requirements.txt
+twitter:
+	python3 data/twitter_data.py
+stocks:
+	python3 data/stocks_data.py
 dashboard:
 	python3 dashboard/dashboard.py
