finished kafka read and write functions

--- a/ZoomCamp/Project2/Makefile
+++ b/ZoomCamp/Project2/Makefile
@@ -1,8 +1,12 @@
 install:
-	pip install -r data/requirements.txt
-twitter:
+	pip install -r requirements.txt
+twitter_data:
 	python3 data/twitter_data.py
-stocks:
+stocks_data:
 	python3 data/stocks_data.py
+kafka_read:
+	python3 kafka/read_data_to_kafka.py
+transform_data:
+	python3 kafka/data_transformations.py
 dashboard:
 	python3 dashboard/dashboard.py
