building the dashboard website

--- a/ZoomCamp/Project2/Makefile
+++ b/ZoomCamp/Project2/Makefile
@@ -5,8 +5,14 @@ twitter_data:
 stocks_data:
 	python3 data/stocks_data.py
 kafka_read:
-	python3 kafka/read_data_to_kafka.py
+	python3 kafkas/read_data_from_kafka.py
+kafka_write:
+	python3 kafkas/write_data_to_kafka.py
 transform_data:
-	python3 kafka/data_transformations.py
+	python3 kafkas/data_transformations.py
 dashboard:
 	python3 dashboard/dashboard.py
+write:
+	python3 dashboard/testing.py
+app:
+	streamlit run dashboard/dashboard.py;python3 dashboard/testing.py
